[workspace]
members = ["server", "bpf", "client", "share", "protocol"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
bytes = "1"
futures-util = "0.3"
futures-channel = "0.3"
futures-rustls = "0.26"
http = "1"
http-body-util = "0.1"
hyper = "1"
hyper-util = "0.1"
tokio-util = "0.7"
totp-rs = "5"
tower-service = "0.3"
tracing = "0.1"
trait-make = "0.1"
