[package]
name = "lycoris-bpf"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", rev = "5c86b7e" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", rev = "5c86b7e" }

[build-dependencies]
bindgen = "0.69"
