[package]
name = "lycoris-bpf"
version = "0.3.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
network-types = "0.0.6"
unroll = "0.1"

share = { path = "../share" }

[build-dependencies]
bindgen = "0.69"
