[package]
name = "lycoris-client"
version = "0.3.1"
edition = "2021"
license = "MIT"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
cidr = { workspace = true }
clap = { workspace = true, features = ["derive", "color", "suggestions"] }
hickory-resolver = { workspace = true, features = ["default", "system-config"] }
http = { workspace = true }
hyper = { workspace = true, features = ["http2", "client"] }
hyper-util = { workspace = true, features = ["client-legacy", "http2", "tokio"] }
http-body-util = { workspace = true }
futures-channel = { workspace = true, features = ["sink"] }
futures-rustls = { workspace = true }
futures-util = { workspace = true, features = ["io"] }
rustls-native-certs = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
tap = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "io-util", "fs", "sync", "time"] }
tokio-stream = { workspace = true, features = ["time", "io-util", "net"] }
tokio-util = { workspace = true, features = ["compat", "io"] }
tracing = { workspace = true }
trait-make = { workspace = true }

protocol = { path = "../protocol" }
share = { path = "../share" }

# bpf
aya = { git = "https://github.com/aya-rs/aya", rev = "80736c5", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya", rev = "80736c5" }
tracing-log = "0.2"

[dev-dependencies]
rustix = { version = "0.38", features = ["process"] }
h2 = { version = "0.4", features = ["stream"] }
