[package]
name = "protocol"
version = "0.2.1"
edition = "2024"

[dependencies]
bytes = { workspace = true }
flume = { workspace = true }
futures-util = { workspace = true, features = ["io", "sink"] }
futures-rustls = { workspace = true, features = ["early-data"] }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["http2", "client"] }
hyper-util = { workspace = true, features = ["client-legacy", "http2", "server"] }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
totp-rs = { workspace = true, features = ["otpauth"] }
thiserror = { workspace = true }
tower-service = { workspace = true }
tracing = { workspace = true }
trait-make = { workspace = true }
