[package]
name = "lycoris-server"
version = "0.3.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-rustls = { workspace = true }
tokio-util = { workspace = true, features = ["compat"] }

protocol = { path = "../protocol" }

thiserror = "1"
bytes = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "fs"] }

futures-util = { version = "0.3", features = ["io"] }
futures-channel = "0.3"
tap = "1"

# log
tracing = "0.1"



# http/2
http = "1"
hyper = { version = "1", features = ["http2", "http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "server-auto", "http1", "http2", "tokio"] }
http-body-util = "0.1"

# tls
tokio-rustls = "0.25"
rustls-pemfile = "2"

# config and args
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive", "color", "suggestions"] }

share = { path = "../share" }

[dev-dependencies]
hyper-rustls = { version = "0.26", features = ["http2", "logging"] }
hyper = { version = "1", features = ["client"] }
hyper-util = { version = "0.1", features = ["client"] }
