[package]
name = "lycoris-server"
version = "0.3.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
clap = { workspace = true, features = ["derive", "color", "suggestions"] }
futures-channel = { workspace = true }
futures-rustls = { workspace = true }
futures-util = { workspace = true, features = ["io"] }
http = { workspace = true }
hyper = { workspace = true, features = ["http2", "http1", "server"] }
http-body-util = { workspace = true }
hyper-util = { workspace = true, features = ["server", "server-auto", "http1", "http2", "tokio"] }
rustls-pemfile = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
tap = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "io-util", "fs"] }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true, features = ["compat"] }

protocol = { path = "../protocol" }
share = { path = "../share" }

[dev-dependencies]
hyper-rustls = { version = "0.26", features = ["http2", "logging"] }
hyper = { version = "1", features = ["client"] }
hyper-util = { version = "0.1", features = ["client"] }
