[package]
name = "lycoris-server"
version = "0.4.1"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
clap = { workspace = true, features = ["derive", "color", "suggestions"] }
futures-rustls = { workspace = true }
futures-util = { workspace = true, features = ["io"] }
hyper = { workspace = true, features = ["http2", "http1", "server"] }
http-body-util = { workspace = true }
hyper-util = { workspace = true, features = ["server", "server-auto", "http1", "http2", "tokio"] }
libc = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
socket2 = { workspace = true }
tap = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "io-util", "fs"] }
tracing = { workspace = true }
thiserror = { workspace = true }

protocol = { path = "../protocol" }
share = { path = "../share" }

[dev-dependencies]
hyper = { workspace = true, features = ["client"] }
hyper-rustls = { version = "0.27", features = ["http2", "logging"] }
hyper-util = { workspace = true, features = ["client"] }
totp-rs = { workspace = true }
