[package]
name = "share"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hickory-resolver = { workspace = true, features = ["default", "system-config"] }
hyper-util = { workspace = true, features = ["client-legacy", "http2", "tokio"] }
tokio-util = { workspace = true, features = ["compat"] }

protocol = { path = "../protocol" }

futures-util = { version = "0.3", features = ["io", "sink"] }
futures-channel = { version = "0.3", features = ["sink"] }
bytes = "1"
tokio = { version = "1", features = ["macros", "rt", "io-util", "net"] }
http = "1"
hyper = "1"
tap = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
